Create Device Manager page (HTML & CSS & JS)

--- a/Templates/Dashboard.html
+++ b/Templates/Dashboard.html
@@ -11,8 +11,8 @@
 <body>
   <aside class="sidebar">
     <h2>لوحة التحكم</h2>
-    <a href="#"><i>📦</i> إدارة الأجهزة</a>
-    <a href="#"><i>📶</i> إدارة الشرائح</a>
+    <a href="Device.html"><i>📦</i> إدارة الأجهزة</a>
+    <a href="sim.html"><i>📶</i> إدارة الشرائح</a>
     <a href="#"><i>👥</i> العملاء</a>
     <a href="#"><i>💳</i> الاشتراكات</a>
     <a href="#"><i>💰</i> المدفوعات</a>
