Mksl Aktb Commit

--- a/Templates/sim.html
+++ b/Templates/sim.html
@@ -12,12 +12,12 @@
   <aside class="sidebar">
     <h2>لوحة التحكم</h2>
     <a href="Device.html"><i>📦</i> إدارة الأجهزة</a>
-    <a href="#"><i>📶</i> إدارة الشرائح</a>
-    <a href="#"><i>👥</i> العملاء</a>
-    <a href="#"><i>💳</i> الاشتراكات</a>
-    <a href="#"><i>💰</i> المدفوعات</a>
-    <a href="#"><i>🔔</i> التنبيهات</a>
-    <a href="#"><i>🛠️</i> المستخدمين</a>
+    <a href="sim.html"><i>📶</i> إدارة الشرائح</a>
+    <a href="Users.html"><i>👥</i> العملاء</a>
+    <a href="Subscription.html"><i>💳</i> الاشتراكات</a>
+    <a href="payment.html"><i>💰</i> المدفوعات</a>
+    <a href="Notifications.html"><i>🔔</i> التنبيهات</a>
+    <a href="Users.html"><i>🛠️</i> المستخدمين</a>
     <a href="#"><i>🚪</i> تسجيل الخروج</a>
   </aside>
 
